cloudcart-k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: cloudcart-backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: cloudcart-backend

  template:
    metadata:
      labels:
        app: cloudcart-backend

    spec:
      containers:
        - name: backend
          image: cloudcartacr001.azurecr.io/backend:v2

          ports:
            - containerPort: 5000
