cloudcart-k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: cloudcart-frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: cloudcart-frontend

  template:
    metadata:
      labels:
        app: cloudcart-frontend

    spec:
      containers:
      - name: frontend

        image: cloudcartacr001.azurecr.io/frontend:v5
        imagePullPolicy: Always

        ports:
        - containerPort: 3000
